metadata1/unpackaged/objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>Removal__c</fullName>
        <label>Removal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Med. Equip</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Contents</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renovation_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renovation Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Start_Date_Time__c</fullName>
        <label>Requested Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Special_Equipment__c</fullName>
        <label>Special Equipment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Filter__c</fullName>
        <label>Standard Filter - Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval_By__c</fullName>
        <label>Submitted for Approval By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substrate__c</fullName>
        <label>Substrate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Man_Days__c</fullName>
        <formula>Number_of_Work_Days_to_Complete__c  *  Supervisors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor Man Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisors_Female__c</fullName>
        <label>Supervisors - Female</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisors_Male__c</fullName>
        <label>Supervisors - Male</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisors__c</fullName>
        <label>Supervisors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply_Coveralls__c</fullName>
        <label>Supply Coveralls - Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply_Facemasks__c</fullName>
        <label>Supply Facemasks - Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply_Gloves__c</fullName>
        <label>Supply Gloves - Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply_Shoe_Covers__c</fullName>
        <label>Supply Shoe Covers - Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_M__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technician_Man_Days__c</fullName>
        <formula>Number_of_Work_Days_to_Complete__c  *  Technicians__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technician Man Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technicians__c</fullName>
        <label>Technicians</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Loss_Items_To_Be_Left_Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Loss Items To Be Left Onsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Apt__c</fullName>
        <formula>ATI_Job__r.Project_Site_Address_2__c</formula>
        <label>Unit/Apt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vaulted_Ceilings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vaulted Ceilings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wet_Decon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wet Decon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Description__c</fullName>
        <label>Work Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional approvers of work order besides Ops Manager-- fed by Office record via Process Builder Flow &apos;Work Order Approver 2&apos;</description>
        <label>Work Order Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type__c</fullName>
        <label>Work Order Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>Infection Control</fullName>
                </value>
                <value>
                    <fullName>HVAC Systems</fullName>
                </value>
                <value>
                    <fullName>Emergency Services</fullName>
                </value>
                <value>
                    <fullName>Reconstruction</fullName>
                </value>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Mold</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <description>Formula field to populate the Work Phone from the Job record</description>
        <formula>ATI_Job__r.Work_Phone__c</formula>
        <label>Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_order_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional approvers of work orders besides Ops manager-- fed by Office record via Process Builder Flow &apos;Work Order Approver&apos;</description>
        <label>Work order Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Office3__c</columns>
        <columns>Division__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Submitted_for_Approval_By__c</columns>
        <columns>Approved_By__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_RIV_Work_Orders</fullName>
        <columns>Project_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Job_Address__c</columns>
        <columns>Project_Site_Contact__c</columns>
        <columns>Work_Description__c</columns>
        <columns>Operations_Manager__c</columns>
        <columns>Approved_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Office2__c</field>
            <operation>equals</operation>
            <value>Riverside</value>
        </filters>
        <label>All RIV_Work Orders</label>
        <sharedTo>
            <group>Riverside</group>
            <group>Riverside_Asbestos</group>
            <group>Riverside_Contents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_Work_Orders_Awaiting_Assignment</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Requested_Start_Date_Time__c</columns>
        <columns>Approved_By__c</columns>
        <columns>Date_Time_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_Time_Approved__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Approved Work Orders Awaiting Assignment</label>
    </listViews>
    <listViews>
        <fullName>New_Work_Orders_Awaiting_Submittal</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Requested_Start_Date_Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Time_Submitted_for_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Work_Order__c.Construction_Work_Order</value>
        </filters>
        <label>New Work Orders Awaiting Submittal</label>
    </listViews>
    <listViews>
        <fullName>Ops_Manager_San_Francisco_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Ops Manager - San Francisco</label>
        <queue>Ops_Manager_San_Francisco</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ops_Managers_Chi_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Ops Managers- Chi</label>
        <queue>Ops_Managers_Chi</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ops_Managers_Corp_Env_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Ops Managers - Corp Env</label>
        <queue>Ops_Managers_Corp_Env</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ops_Managers_LA_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Ops Managers- LA</label>
        <queue>Ops_Managers_LA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RIV_Work_Orders_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Requested_Start_Date_Time__c</columns>
        <columns>Office3__c</columns>
        <columns>Operations_Manager__c</columns>
        <columns>Submitted_for_Approval_By__c</columns>
        <columns>Approved_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Time_Submitted_for_Approval__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date_Time_Approved__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Office2__c</field>
            <operation>equals</operation>
            <value>Riverside</value>
        </filters>
        <label>RIV - Work Orders Awaiting Approval</label>
        <sharedTo>
            <group>Riverside</group>
            <group>Riverside_Asbestos</group>
            <group>Riverside_Contents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Renee_M_Work_Orders</fullName>
        <columns>Project_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Job_Address__c</columns>
        <columns>Project_Site_Contact__c</columns>
        <columns>Work_Description__c</columns>
        <columns>Operations_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Office2__c</field>
            <operation>equals</operation>
            <value>Riverside</value>
        </filters>
        <filters>
            <field>Project_Manager__c</field>
            <operation>equals</operation>
            <value>renee mcfadden</value>
        </filters>
        <label>Renee M._Work Orders</label>
        <sharedTo>
            <group>Riverside</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SF_Work_Orders_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Requested_Start_Date_Time__c</columns>
        <columns>Submitted_for_Approval_By__c</columns>
        <columns>Date_Time_Submitted_for_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Time_Submitted_for_Approval__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date_Time_Approved__c</field>
            <operation>equals</operation>
        </filters>
        <label>SF - Work Orders Awaiting Approval</label>
    </listViews>
    <listViews>
        <fullName>SF_Work_Orders_Awaiting_Assignment</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Requested_Start_Date_Time__c</columns>
        <columns>Approved_By__c</columns>
        <columns>Date_Time_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_Time_Approved__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>SF - Work Orders Awaiting Assignment</label>
    </listViews>
    <listViews>
        <fullName>SF_Work_Orders_Awaiting_Submittal</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Requested_Start_Date_Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Time_Submitted_for_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <label>SF - Work Orders Awaiting Submittal</label>
    </listViews>
    <listViews>
        <fullName>Submitted_Work_Orders_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Requested_Start_Date_Time__c</columns>
        <columns>Submitted_for_Approval_By__c</columns>
        <columns>Date_Time_Submitted_for_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Time_Submitted_for_Approval__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date_Time_Approved__c</field>
            <operation>equals</operation>
        </filters>
        <label>Submitted Work Orders Awaiting Approval</label>
    </listViews>
    <nameField>
        <displayFormat>WO-{00000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <recordTypes>
        <fullName>Construction_Work_Order</fullName>
        <active>true</active>
        <label>Construction Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Environmental_Work_Order</fullName>
        <active>true</active>
        <label>Environmental Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Healthcare_Work_Order</fullName>
        <active>true</active>
        <label>Healthcare Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Work_Order</fullName>
        <active>true</active>
        <label>Marketing Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restoration_Work_Order</fullName>
        <active>true</active>
        <label>Restoration Work Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>